align homepage, server sytax err fix

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,3 +22,7 @@
  main {
      flex: 1 0 auto;
  }
+
+ .add-height {
+     height: 85px;
+ }
